Переименованы классы СSS

--- a/css/styles.css
+++ b/css/styles.css
@@ -155,12 +155,16 @@ body {
   color: var(--logo-color-light);
 }
 .address {
+  font-style: normal;
+  font-weight: normal;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: #ffffff;
 }
 .contacts-footer {
+  font-style: normal;
+  font-weight: normal;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
@@ -181,13 +185,13 @@ body {
   color: (--title-color);
 }
 /* Секция 2 */
-.portfolio-subtitle-s2 {
+.portfolio-name {
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
 }
-.portfolio-text-s2 {
+.portfolio-project {
   font-size: 16px;
   line-height: 1.87;
   letter-spacing: 0.03em;
