--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,8 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
 body {
   font-family: 'Roboto', sans-serif;
   color: var(--title-color);
@@ -30,8 +35,6 @@ body {
 }
 ul {
   list-style: none;
-  margin: 0;
-  padding: 0;
 }
 p,
 h1,
@@ -59,6 +62,16 @@ h3 {
   padding-bottom: 94px;
 }
 /*хедер*/
+.header .nav {
+  display: flex;
+  align-items: center;
+}
+.nav-list {
+  display: flex;
+}
+.nav-list .item + .item {
+  margin-left: 50px;
+}
 .header {
   background-color: #ffffff;
 }
@@ -69,16 +82,25 @@ h3 {
   line-height: 1.19;
   letter-spacing: 0.03em;
   color: var(--logo-color-dark);
+
+  margin-right: 93px;
 }
 .logo-color {
   color: var(--hover-focus-color);
 }
-.nav-list {
+.nav-list .link {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
+
   cursor: pointer;
+}
+.contacts-list {
+  display: flex;
+}
+.contacts-list .item + .item {
+  margin-left: 50px;
 }
 .contacts {
   font-weight: 500;
@@ -89,6 +111,9 @@ h3 {
 }
 /* МЕЙН */
 /* Секция 1 */
+.background {
+  background-color: #2f303a;
+}
 .hero-title {
   font-weight: 900;
   font-size: 44px;
@@ -97,6 +122,7 @@ h3 {
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: #ffffff;
+  margin-bottom: 30px;
 }
 .btn-hero {
   font-weight: 700;
@@ -110,6 +136,10 @@ h3 {
   cursor: pointer;
 }
 /* Секция 2 */
+.list-advantages {
+  display: flex;
+  justify-content: space-between;
+}
 .hero-second-subtitle {
   font-weight: 700;
   font-size: 14px;
@@ -123,6 +153,7 @@ h3 {
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--subtitle-color);
+  width: 270px;
 }
 /* Секция 3 */
 .hero-title-s3 {
@@ -132,6 +163,11 @@ h3 {
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--title-color);
+  margin-bottom: 50px;
+}
+.image-list {
+  display: flex;
+  justify-content: space-between;
 }
 /* Секция 4 */
 .hero-fourth-title {
@@ -141,6 +177,12 @@ h3 {
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--title-color);
+  margin-bottom: 50px;
+}
+.list-users {
+  display: flex;
+  justify-content: space-between;
+  text-align: center;
 }
 .user {
   font-weight: 500;
@@ -148,6 +190,8 @@ h3 {
   line-height: 1.19;
   letter-spacing: 0.03em;
   color: var(--title-color);
+  width: 270px;
+  height: 19px;
 }
 .job-user {
   font-size: 16px;
@@ -158,6 +202,7 @@ h3 {
 /* ФУТЕР */
 .footer {
   background-color: #2f303a;
+  box-sizing: border-box;
 }
 .logo-footer {
   font-family: 'Raleway';
@@ -166,6 +211,7 @@ h3 {
   line-height: 1.19;
   letter-spacing: 0.03em;
   color: var(--logo-color-light);
+  margin-top: 60px;
 }
 .address {
   font-style: normal;
