--- a/css/styles.css
+++ b/css/styles.css
@@ -62,6 +62,9 @@ h3 {
   padding-bottom: 94px;
 }
 /*хедер*/
+.header {
+  align-items: center;
+}
 .header .nav {
   display: flex;
   align-items: center;
