Перенесен класс контейнер

--- a/css/styles.css
+++ b/css/styles.css
@@ -63,11 +63,11 @@ h3 {
 }
 /*хедер*/
 .header {
-  align-items: center;
-}
-.header .nav.contacts-list {
   display: flex;
   align-items: center;
+}
+.nav {
+  display: flex;
 }
 .nav-list {
   display: flex;
