--- a/css/styles.css
+++ b/css/styles.css
@@ -66,8 +66,16 @@ h3 {
   display: flex;
   align-items: center;
 }
+.header .container {
+  display: flex;
+  align-items: center;
+}
 .nav {
   display: flex;
+}
+.nav-list {
+  display: flex;
+  align-items: center;
 }
 .nav-list .item + .item {
   margin-left: 50px;
