--- a/css/styles.css
+++ b/css/styles.css
@@ -143,6 +143,15 @@ h3 {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   cursor: pointer;
+
+  margin-left: auto;
+  margin-right: auto;
+  padding: 10px 32px;
+
+  display: block;
+  font-size: 16px;
+  border: none;
+  border-radius: 4px;
 }
 /* Секция 2 */
 .list-advantages {
@@ -177,6 +186,8 @@ h3 {
 .image-list {
   display: flex;
   justify-content: space-between;
+  margin: 0;
+  padding: 0;
 }
 /* Секция 4 */
 .hero-fourth-title {
@@ -192,6 +203,8 @@ h3 {
   display: flex;
   justify-content: space-between;
   text-align: center;
+  margin: 0;
+  padding: 0;
 }
 .user {
   font-weight: 500;
