--- a/css/styles.css
+++ b/css/styles.css
@@ -138,6 +138,7 @@ h3 {
   font-size: 16px;
   line-height: 1.87;
   letter-spacing: 0.06em;
+
   color: #ffffff;
   background: var(--hover-focus-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
@@ -149,7 +150,6 @@ h3 {
   padding: 10px 32px;
 
   display: block;
-  font-size: 16px;
   border: none;
   border-radius: 4px;
 }
@@ -157,6 +157,8 @@ h3 {
 .list-advantages {
   display: flex;
   justify-content: space-between;
+  margin: 0;
+  padding: 0;
 }
 .hero-second-subtitle {
   font-weight: 700;
@@ -224,7 +226,8 @@ h3 {
 /* ФУТЕР */
 .footer {
   background-color: #2f303a;
-  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 .logo-footer {
   font-family: 'Raleway';
@@ -264,10 +267,26 @@ h3 {
   display: flex;
   justify-content: center;
 }
+.list-btn .item + .item {
+  margin-left: 8px;
+}
 .btn-portfolio {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.625;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 6px 22px;
+  border: none;
+
+  text-align: center;
+  letter-spacing: 0.03em;
+
   color: var(--title-color);
   background: #f5f4fa;
-  color: (--title-color);
+
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
 }
 /* Секция 2 */
 .project-list {
