--- a/css/styles.css
+++ b/css/styles.css
@@ -319,7 +319,7 @@ h3 {
   margin-left: -30px;
   margin-top: -30px;
 }
-.project-list > .item {
+.project-list .item {
   flex-basis: calc(100% / 3 -30px);
   margin-left: 30px;
   margin-top: 30px;
