--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,11 @@
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
 body {
   font-family: 'Roboto', sans-serif;
   color: var(--title-color);
+}
+img {
+  display: block;
+  min-width: 100%;
+  height: auto;
 }
 .container {
   width: 1200px;
@@ -323,8 +323,10 @@ h3 {
   flex-basis: calc(100% / 3 -30px);
   margin-left: 30px;
   margin-top: 30px;
+}
+.portfolio-thumb {
   background: #ffffff;
-  outline: 1px solid #eeeeee;
+  border: 1px solid #eeeeee;
 }
 .portfolio-name {
   font-weight: 700;
