--- a/css/styles.css
+++ b/css/styles.css
@@ -126,7 +126,7 @@ h3 {
 }
 /* МЕЙН */
 /* Секция 1 */
-.background {
+.hero-background {
   background-color: #2f303a;
   padding-top: 200px;
   padding-bottom: 200px;
@@ -146,7 +146,6 @@ h3 {
   font-size: 16px;
   line-height: 1.87;
   letter-spacing: 0.06em;
-  padding-bottom: 20px;
 
   color: #ffffff;
   background: var(--hover-focus-color);
@@ -186,7 +185,7 @@ h3 {
   width: 270px;
 }
 /* Секция 3 */
-.hero-title-s3 {
+.hero-third-title {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.16;
