--- a/css/styles.css
+++ b/css/styles.css
@@ -82,6 +82,7 @@ h3 {
   padding-top: 32px;
   padding-bottom: 32px;
 }
+
 .nav-list .item + .item {
   margin-left: 50px;
 }
@@ -120,6 +121,10 @@ h3 {
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--subtitle-color);
+}
+.link {
+  padding-top: 32px;
+  padding-bottom: 32px;
 }
 /* МЕЙН */
 /* Секция 1 */
